--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </td>
       <td style="padding:20px;width:75%;vertical-align:middle">
         <a href="http://jonbarron.info/zipnerf">
-          <papertitle>391OS: Fully functioning Unix-style Operating System</papertitle>
+          <papertitle>💽 391OS: Fully functioning Unix-style Operating System</papertitle>
         </a>
         <br>
         <a href="http://jonbarron.info/zipnerf">project Github</a>
@@ -89,11 +89,11 @@
 
     <tr>
       <td style="padding:20px;width:25%;vertical-align:middle">
-        <img src="images/zrush.jpg" width="160" height="160">
+        <img src="images/ccnct.jpg" width="160" height="160">
       </td>
       <td style="padding:20px;width:75%;vertical-align:middle">
         <a href="https://drive.google.com/file/d/1YvRx-4hrZoCk-nl6OgVJZlHAqOiN5hWq/view?usp=sharing">
-          <papertitle>Card Connect: Virtual Tarot Card Interpreter</papertitle>
+          <papertitle>🃏 Card Connect: Virtual Tarot Card Interpreter</papertitle>
         </a>
         <br>
         <p>Tarot reading machine that uses ultrasonic sensors to track landmark's location for drawing cards, ASR and TTS as user I/O, and OpenAI's GPT3 
@@ -123,7 +123,7 @@
       
       <td style="padding:20px;width:75%;vertical-align:middle">
 				<a href="https://dreambooth3d.github.io/">
-          <papertitle>StarCraft Dogfight: SoC approach on top-down shooter game using FPGA</papertitle>
+          <papertitle>🛰️ StarCraft Dogfight: SoC approach on top-down shooter game using FPGA</papertitle>
         </a>
         <br>
 				<a href="https://dreambooth3d.github.io/">project page</a> / 
@@ -184,7 +184,7 @@
       </td>
       <td style="padding:20px;width:75%;vertical-align:middle">
         <a href="https://drive.google.com/file/d/1YvRx-4hrZoCk-nl6OgVJZlHAqOiN5hWq/view?usp=sharing">
-          <papertitle>Zerg-Rush</papertitle>
+          <papertitle>👾 Zerg-Rush</papertitle>
         </a>
         <br>
         <p>CLI-based TCP network penttesting tool with Python to conduct cybersecurity attacks (e.g. SYN/ACK) on industrial control system (ICS) units used in railroads and power grids. 
