dithered cover img

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 -webkit-backdrop-filter: blur(10px);
                 border-radius: 10px;
                 border: 1px solid rgba(255, 255, 255, 0.18);
-                background-image: url(images/backdrop_blur.jpg);
+                background-image: url(images/bd_dithered_blur_inverted_cc.jpg);
                 background-size: cover;
                 background-position:center;
               "
