updated background and intro page

--- a/index.html
+++ b/index.html
@@ -88,12 +88,6 @@
                         >Chambana, IL</a
                       >.
                     </p>
-                    <p>
-                      I'm currently interning at
-                      <a href="https://rivian.com/">Rivian</a> (-0----0-) as
-                      part of the electrical hardware team, working on special
-                      projects 👀
-                    </p>
                     <p style="text-align: center">
                       <a href="mailto:wonjong3@illinois.edu">Email</a>
                       &nbsp/&nbsp
@@ -127,13 +121,33 @@
               "
             >
               <tbody>
-                <tr>
+                  <tr>
                   <td
                     style="
                       padding-top: 50px;
                       padding-left: 20px;
                       padding-right: 20px;
-                      padding-bottom: 20px;
+                      width: 100%;
+                      vertical-align: middle;
+                    "
+                  >
+                    <heading>Background</heading>
+                    <p>
+                      <ul>
+                        <li>I'm currently interning at
+                        <a href="https://rivian.com/">Rivian</a> (-0----0-) as
+                        part of the electrical hardware team, working on special
+                        projects.</li>
+                      <li>I'm also an undergraduate course assistant for ECE 385, an introductory course
+                        for digital hardware design and verification using FPGA.</li>
+                      </ul>
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td
+                    style="
+                      padding: 20px;
                       width: 100%;
                       vertical-align: middle;
                     "
