formatted html pretty

--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
       <tbody>
         <tr style="padding: 0px">
           <td style="padding: 0px">
-            <div>
             <table
               style="
                 width: 100%;
@@ -69,7 +68,7 @@
                 border: 1px solid rgba(255, 255, 255, 0.18);
                 background-image: url(images/bd_dithered_blur_inverted_cc.jpg);
                 background-size: cover;
-                background-position:center;
+                background-position: center;
               "
             >
               <tbody>
@@ -121,7 +120,7 @@
               "
             >
               <tbody>
-                  <tr>
+                <tr>
                   <td
                     style="
                       padding-top: 50px;
@@ -132,25 +131,24 @@
                     "
                   >
                     <heading>Background</heading>
-                    <p>
-                      <ul>
-                        <li>I'm currently interning at
+                    <ul>
+                      <li>
+                        I'm currently interning at
                         <a href="https://rivian.com/">Rivian</a> (-0----0-) as
                         part of the electrical hardware team, working on special
-                        projects.</li>
-                      <li>I'm also an undergraduate course assistant for ECE 385, an introductory course
-                        for digital hardware design and verification using FPGA.</li>
-                      </ul>
-                    </p>
+                        projects.
+                      </li>
+                      <li>
+                        I'm also an undergraduate course assistant for ECE 385,
+                        an introductory course for digital systems design and
+                        verification using FPGA.
+                      </li>
+                    </ul>
                   </td>
                 </tr>
                 <tr>
                   <td
-                    style="
-                      padding: 20px;
-                      width: 100%;
-                      vertical-align: middle;
-                    "
+                    style="padding: 20px; width: 100%; vertical-align: middle"
                   >
                     <heading>Projects</heading>
                     <p>
