--- a/index.html
+++ b/index.html
@@ -130,7 +130,21 @@
                       vertical-align: middle;
                     "
                   >
-                    <heading>Background</heading>
+                    <heading>Index</heading>
+                    <p><a href="#background">Background</a></p>
+                    <p><a href="#projects">Projects</a></p>
+                    <p><a href="#notes">Notes</a></p>
+                  </td>
+                </tr>
+                <tr>
+                  <td
+                    style="
+                      padding: 20px;
+                      width: 100%;
+                      vertical-align: middle;
+                    "
+                  >
+                    <heading id="background">Background</heading>
                     <ul>
                       <li>
                         I'm currently interning at
@@ -150,7 +164,7 @@
                   <td
                     style="padding: 20px; width: 100%; vertical-align: middle"
                   >
-                    <heading>Projects</heading>
+                    <heading id="projects">Projects</heading>
                     <p>
                       I'm interested in digital systems design and computer
                       architecture. Representative works are (or will be)
@@ -366,7 +380,7 @@
               <tbody>
                 <tr>
                   <td>
-                    <heading>Notes</heading>
+                    <heading id="notes">Notes</heading>
                     <p>
                       Below are compilation of notes for myself (or some others
                       too)
